--- a/notebooks/02 Setting up Data Lake using ADLS/managing files in ADLS using python.ipynb
+++ b/notebooks/02 Setting up Data Lake using ADLS/managing files in ADLS using python.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, uuid\n",
-    "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient, __version__\n"
+    "import os\n",
+    "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\n"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a blob client using the local fi name as the name for the blob\n",
+    "# Create a blob client using the local file name as the name for the blob\n",
     "blob_name=\"retail\"\n",
     "blob_client = blob_service_client.get_blob_client(container=container_name, blob=blob_name)"
    ]
