--- a/notebooks/02 Setting up Data Lake using ADLS/managing files in ADLS using python.ipynb
+++ b/notebooks/02 Setting up Data Lake using ADLS/managing files in ADLS using python.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#install the Azure Blob Storage client library for Python package by using the pip install command\n",
+    "#install the Azure Blob Storage client library for Python by using the pip install command\n",
     "\n",
     "pip install azure-storage-blob"
    ]
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\n"
+    "from azure.storage.blob import BlobServiceClient, BlobClient\n"
    ]
   },
   {
