--- a/docs/020 Lambda Functions in Python.ipynb
+++ b/docs/020 Lambda Functions in Python.ipynb
@@ -12,6 +12,41 @@
     "* Get unique values from list using map and set\n",
     "* Sort Python lists using key"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Overview of Lambda Functions in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Usage of Lambda Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Filter Data in Python Lists using filter and lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Get unique values from list using map and set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Sort Python lists using key"
+   ]
   }
  ],
  "metadata": {
